--- a/Template_Assignment.Rmd
+++ b/Template_Assignment.Rmd
@@ -1,11 +1,24 @@
 ---
-title: "DTP coverage"
-author: "Tristan Verbeek, 2864049"
+title: "DTP Coverage"
+author: |
+  G.J.R. Weydemuller (student number)  
+  L. Waaijenberg (2862154)  
+  P. Gandra Rodrigues (2870539)  
+  Q. Faber (2861921)  
+  R.A. Kali (2850680)  
+  T. Adam (2871752)  
+  T.M.V. Verbeek (2864049)  
+  **Tutor:** J.F. Fitzgerald  
+  **Tutorial group:** Tutorial group 1  
+  **Course:** Programming for Economists  
+  **Institute:** Vrije Universiteit Amsterdam
 date: "`r Sys.Date()`"
-output: pdf_document
+output:
+  pdf_document:
+    latex_engine: xelatex
 ---
 
-# Set-up your environment
+
 
 ```{r include=FALSE}
 ## sets WD to the file’s folder when you hit ‘Run’ or ‘Knit’
@@ -18,7 +31,6 @@ if (requireNamespace("rstudioapi", quietly = TRUE) &&
 ```{r package_install, include=FALSE}
 install.packages("tidyverse")
 install.packages("readxl")
-install.packages("dplyr")
 install.packages("sf")
 install.packages("rnaturalearth")
 install.packages("rnaturalearthdata")
@@ -27,61 +39,30 @@ install.packages("viridis")
 install.packages("grid")
 ```
 
-```{r packages}
+```{r packages, include=FALSE}
 library(tidyverse)
 library(readxl)
-library(dplyr)
 ```
 
-# Title Page
 
-By: G.J.R. Weydemuller (student number)
-
-L. Waaijenberg (2862154)
-
-P. Gandra Rodrigues (2870539)
-
-Q. Faber (2861921)
-
-R.A. Kali (2850680)
-
-T. Adam (2871752)
-
-T.M.V. Verbeek (2864049)
-
-Tutor: J.F. Fitzgerald
-
-Tutorial group: Tutorial group 1
-
-Course: Programming for Economists
-
-Institute: Vrije Universiteit Amsterdam
-
-# Part 1 - Identify a Social Problem
+# Part 1 – Identify a Social Problem
 
 ## 1.1 Describe the Social Problem
+DTP vaccination protects against diphtheria, tetanus, and pertussis and is one of the most cost-effective public health interventions, preventing an estimated 4.4 million deaths annually (UNICEF, 2024). Despite its inclusion in most national immunization programs, around 21 million children were under- or unvaccinated in 2023, with 14.5 million receiving no vaccines at all (UNICEF, 2024). This gap is most severe in low- and middle-income countries and reflects broader social inequalities in healthcare, education, and infrastructure (Our World in Data, n.d.; UNICEF, 2024).
 
-DTP vaccination, protecting against diphtheria, tetanus, and pertussis, is a cornerstone of global public health. It is one of the most cost-effective interventions, preventing an estimated 4.4 million deaths annually (unicef, 2024). Despite its proven effectiveness and inclusion in nearly all national immunization schedules, millions of children worldwide remain under-vaccinated or entirely unvaccinated. In 2023 alone, approximately 21 million children were either unvaccinated or under-vaccinated, with 14.5 million receiving no vaccines at all (unicef, 2024). This gap in coverage leads to preventable illness, long-term disability, and death, particularly in low- and middle-income countries (Our World in Data, sd). The issue is not merely medical but deeply social, as it reflects and reinforces inequalities in access to healthcare, education, and infrastructure (unicef, 2024).
+Low DTP coverage often signals systemic issues such as poverty, conflict, and misinformation, making it a key indicator of healthcare system strength and social equity (UNICEF, 2024).
 
-Vaccination coverage is also a proxy for the strength of a country’s healthcare system. Low DTP coverage often signals broader systemic issues such as poverty, conflict, misinformation, and weak governance. These factors disproportionately affect vulnerable populations, making DTP vaccination a critical indicator of social justice and equity (unicef, 2024).
+Research question: How does government healthcare spending per capita correlate with national DTP vaccination coverage across income groups?
 
-Research question: "How does government healthcare spending per capita correlate with national vaccination coverage rates for routine immunizations in low-, middle-, and high-income countries?"
+## 1.2 Sources Identifying DTP Vaccination as a Social Problem
+WHO and UNICEF warn of rising vaccine-preventable diseases due to declining coverage, misinformation, and funding cuts (WHO Media Team, 2025). DTP-preventable diseases remain deadly, especially in low-resource settings (UNICEF, n.d.). UNICEF data also show high dropout rates in DTP series completion, linked to systemic barriers like poor healthcare access and infrastructure (Wang et al., 2019).
 
-## Sources identifying DTP vaccination as a social problem
+## 1.3 Research Gap
+While DTP coverage has been widely studied, few analyses directly link it to government healthcare spending across income levels. Most research focuses on micro-level factors or broad trends, often overlooking economic policy variables (UNICEF, 2024).
 
-World Health Organization (WHO) and UNICEF have jointly warned that vaccine-preventable diseases, including diphtheria, are resurging due to declining immunization coverage, misinformation, and funding cuts. They emphasize that millions of children are at risk, and urgent investment in immunization is needed to prevent a reversal of decades of progress (WHO Media Team, 2025).
+## 1.4 Contribution of This Report
+This report explores the relationship between public healthcare spending and DTP coverage across income groups. It aims to provide insights into whether increased investment leads to better immunization outcomes, informing global health and development policy.
 
-UNICEF outlines the severe consequences of DTP-preventable diseases. Diphtheria can cause heart and nerve damage, tetanus is often fatal even with treatment, and pertussis can lead to pneumonia and death in infants. These diseases disproportionately affect children in low-resource settings, highlighting the social dimension of under-vaccination (UNICEF, sd).
-
-A UNICEF data report on DTP vaccine dropout rates shows that millions of children start but do not complete the DTP series. This dropout is especially prevalent in low-income countries and is linked to systemic barriers such as healthcare access, education, and infrastructure (Wang; et al., 2019).
-
-## What has not been fully researched
-
-While many studies have examined DTP coverage and its determinants, there is limited comparative analysis across income groups that links government healthcare spending per capita directly to national DTP vaccination rates. Most existing research focuses on either micro-level determinants (e.g., parental education, rural access) or macro-level trends without integrating economic policy variables. UNICEF notes that while DTP3 coverage is widely used as a marker of how well countries provide routine immunization, disparities persist, and economic factors such as national healthcare investment are often underexplored in comparative frameworks (UNICEF, 2024).
-
-## Contribution of this report
-
-This report aims to fill that gap by analyzing how government healthcare spending correlates with DTP vaccination coverage across low-, middle-, and high-income countries. This research will provide new insights into whether increased public investment in health translates into better immunization outcomes. This could inform both global health policy and economic development strategies, especially in resource-constrained settings.
 
 # Part 2 - Data Sourcing
 
@@ -114,7 +95,8 @@ raw_healthspending_data <- read.csv(url_spending)
 
 # Read the CSV into a dataframe
 raw_childdeath_data <- read.csv(url_childdeath)
-
+raw_healthspending_data <- raw_healthspending_data %>%
+select(Indicator, Location, Period, Value)
 
 # Preview the first few rows to check the import
 head(raw_healthspending_data)
@@ -122,136 +104,86 @@ head(raw_coverage_data)
 
 ```
 
-```{r}
-head(raw_healthspending_data)
-head(raw_coverage_data)
-```
-
-``` r
-inline_code = TRUE
-```
 
 ## 2.2 Provide a short summary of the dataset(s)
 
-**Source 1: DTP Vaccination Coverage**
+```{r}
+head(raw_coverage_data)
+head(raw_healthspending_data)
+```
 
-\- Credibility: This dataset is published by the WHO/UNICEF Estimates of National Immunization Coverage (WUENIC), the leading global authority on public health. WHO collaborates with national governments and UNICEF to compile and validate immunization data (World Health Organization, 2024).
+**Source 1: DTP Vaccination Coverage**  
+- **Credibility**: Published by WHO/UNICEF (WUENIC), the leading global authority on immunization data (World Health Organization, 2024).  
+- **Data Quality**: Combines administrative records, surveys, and expert review, enhancing reliability.  
+- **Relevance**: Provides DTP3 coverage rates by region and year—central to the research question.
 
-\- Data Quality: The data is based on a combination of administrative data, household surveys, and expert review. This triangulation improves accuracy and reliability.
+**Source 2: Government Healthcare Spending**  
+- **Credibility**: Provided by the World Bank, using WHO’s Global Health Expenditure Database (World Bank, 2024).  
+- **Data Quality**: Based on standardized, internationally accepted methods; updated annually.  
+- **Relevance**: Supplies the key independent variable—health spending per capita—for correlation analysis.
 
-\- Relevance: It directly provides the DTP3 coverage rates, which are central to your research question. The data is also disaggregated by region and year, allowing for temporal and cross-regional analysis.
+**Source 3: Child Death Rates**  
+- **Credibility**: From WHO’s Global Health Observatory, a trusted source for global health statistics (World Health Organization, 2024).  
+- **Data Quality**: Derived from national systems, surveys, and statistical modeling.  
+- **Relevance**: Offers contextual insight into the broader social impact of vaccination and healthcare investment.
 
-**Source 2: Government Healthcare Spending**
-
-\- Credibility: The World Bank is a globally respected institution that provides standardized economic and development data. It sources health expenditure data from the WHO Global Health Expenditure Database (World Bank, 2024).
-
-\- Data Quality: The data is collected using internationally accepted methodologies and is updated annually. It includes consistent country-level indicators, making it ideal for cross-country comparisons.
-
-\- Relevance: This dataset provides the independent variable in your analysis—government health spending per capita—which you are correlating with vaccination coverage.
-
-**Source 3: Child Death Rates**
-
-\- Credibility: This data is also from the World Health Organization, specifically its Global Health Observatory (GHO), which is the main repository for WHO’s health-related statistics (World Health Organization, 2024).
-
-\- Data Quality: The under-five mortality data is compiled from national vital registration systems, surveys, and statistical modeling, and is reviewed by global health experts.
-
-\- Relevance: While not part of your main correlation analysis, this dataset provides valuable contextual insight into the broader social impact of vaccination coverage and healthcare investment.
-
-## Complementarity of the Datasets
-
+## 2.2.1 Complementarity of the Datasets
 These datasets are complementary in structure and purpose:
-
-· The DTP dataset provides the dependent variable (vaccination coverage).
-
-· The health spending dataset provides the independent variable (government health expenditure per capita).
-
-· The child death dataset provides the independent variable (child death)
+- The **DTP dataset** provides the **dependent variable** (vaccination coverage).
+- The **health spending dataset** provides the **independent variable** (government health expenditure per capita).
+- The **child death dataset** provides the **independent variable** (child death).
 
 Together, they allow for a cross-country analysis of how public investment in health and child death correlates with immunization outcomes.
 
-## Suitability for the Research Topic
-
+## 2.2.2 Suitability for the Research Topic
 The research question investigates the relationship between government healthcare spending and DTP vaccination coverage across income groups. These datasets are ideal because:
+- They are **comprehensive and global**, enabling cross-country comparisons.
+- They are **updated annually**, supporting time-series or cross-sectional analysis.
+- They are **standardized and well-documented**, ensuring data quality and reproducibility.
 
-· They are comprehensive and global, enabling cross-country comparisons.
+## 2.2.3 Data Limitations
+Despite their strengths, the datasets have some limitations:
 
-· They are updated annually, supporting time-series or cross-sectional analysis.
+**WHO DTP Coverage & Child Death Data**  
+- Missing or estimated values in conflict-affected countries  
+- Potential reporting bias and survey recall errors  
+- Limited insight into subnational disparities  
 
-· They are standardized and well-documented, ensuring data quality and reproducibility.
+**World Bank Health Spending**  
+- Reported in current USD, affected by inflation and exchange rates  
+- No detail on spending allocation (e.g., immunization vs. other services)  
+- Some countries have incomplete or outdated records  
 
-## Data Limitations
-
-Despite their strengths, the datasets have limitations:
-
-WHO DTP Coverage & WHO child death:
-
-· Some countries have missing or estimated values, especially in conflict zones.
-
-· Coverage estimates may be influenced by reporting biases or survey recall errors.
-
-· The data may not fully reflect subnational disparities in vaccination access.
-
-World Bank Health Spending:
-
-· Spending data are in current US dollars, which may be affected by inflation and exchange rate fluctuations.
-
-· The data do not indicate how funds are allocated (e.g., toward immunization vs. other services).
-
-· Some countries have incomplete or outdated records for recent years.
-
-These limitations mean that while the analysis can reveal correlations, it cannot establish causality or account for all contextual factors.
+These limitations mean the analysis shows correlations, not causation, and may not capture all contextual factors.
 
 ## 2.3 Describe the type of variables included
 
-WHO DTP Vaccination Coverage:
+**WHO DTP Vaccination Coverage**  
+- **Antigen**: DTP1, DTP3  
+- **Coverage**: % of vaccinated target population  
+- **Target Pop.**: Eligible population for vaccine  
+- **Years**: 1980–2023  
+- **Region**: WHO regions  
+- **Frequency**: Annual  
+- **Source**: WHO/UNICEF Joint Reporting, DHS, MICS  
+- **Method**: Admin data + surveys + expert review  
 
--   Antigen: DTP 1 and DTP3
+**World Bank Health Spending**  
+- **Indicator**: Health expenditure per capita (USD)  
+- **Years**: 2000–2023  
+- **Region**: WHO regions  
+- **Frequency**: Annual  
+- **Source**: WHO Global Health Expenditure Database  
 
--   Coverage: vaccinated target population
+**WHO Child Deaths (Under 5)**  
+- **Indicator**: Under-five mortality rate  
+- **Target Pop.**: Children aged 0–4  
+- **Years**: 1980–2023  
+- **Region**: WHO regions  
+- **Frequency**: Annual  
+- **Source**: WHO/UNICEF GHO, CRVS, DHS, MICS  
+- **Method**: National data + statistical adjustments + expert review  
 
--   Units: percentage
-
--   Target_Pop: target population for the given vaccine
-
--   Years Covered: 1980–2023
-
--   Region: WHO regions
-
--   Frequency: Annual
-
--   Source: WHO/UNICEF Joint Reporting Form and surveys (e.g., DHS, MICS)
-
--   Estimation Method: Combination of administrative data, surveys, and expert review.
-
-World Bank Health Spending:
-
--   Indicator: Current health expenditure per capita
-
--   Years Covered: 2000–2023
-
--   Region: WHO regions
-
--   Frequency: Annual
-
--   Units: US dollars
-
--   Source: WHO Global Health Expenditure Database[[KR(1]](#_msocom_1) 
-
-WHO child deaths among children under five:
-
--   Indicator: Mortality rate under children under five
-
--   Target_Pop: population of children aged 0–4 years
-
--   Years covered: 1980-2023
-
--   Region: WHO regions
-
--   Frequency: Annual
-
--   Source: WHO/UNICEF GHO, national civil registration, surveys (DHS, MICS)
-
--   Estimation method: Combination of available national data (CRVS, surveys) and adjustments by statistical methods and expert review.
 
 # Part 3 - Quantifying
 
@@ -304,30 +236,26 @@ childdeath_typed <- childdeath_selected %>%
     Deaths = as.numeric(Deaths)
   )
 ```
+### 3.1.1 Health Spending Data  
+Selected and renamed relevant columns; ensured `Year` and `Spending` were numeric for time-based analysis. This aligned the dataset with DTP data using `Region` and `Year`.
 
-### Health Spending Data
+### 3.1.2 DTP Vaccination Coverage Data  
+Filtered for WHO regions and WUENIC estimates. Created `PeriodGroup` to group years into intervals for clearer trend analysis.
 
-We began by selecting the relevant columns from the raw health spending dataset and renaming them for clarity. We also ensured that the `Year` and `Spending` columns were numeric to support time-based analysis. This step was essential to align the data with the DTP vaccination dataset, which also uses `Region` and `Year` as key identifiers.
+### 3.1.3 Child Mortality Data  
+Selected and renamed key columns; converted values to numeric. Prepared for merging on `Region` and `Year`.
 
-### DTP Vaccination Coverage Data
+### 3.1.4 Trade-offs  
+- Aggregating into 5-year periods reduces detail but clarifies trends  
+- Averages may mask outliers or skewed data  
 
-Next, we filtered the immunization dataset to include only WHO regions and WUENIC estimates, which are considered the most reliable. We also created a new variable, `PeriodGroup`, to group years into meaningful intervals for trend analysis. This transformation allows us to analyze changes in vaccination coverage over time in a more interpretable way.
-
-### Child Mortality Data
-
-We also prepared the child mortality dataset by selecting and renaming relevant columns, and converting values to numeric types. This ensures that the dataset can be merged with the others on `Region` and `Year`.
-
-### Error Handling and Fixes
-
-During the cleaning process, we encountered several common issues:
-
--   **Missing values (`NA`)**: These were removed using `na.omit()` or filtered out using `filter(!is.na(...))` to ensure clean merges.
--   **Non-numeric values**: Some columns were read as character types and had to be converted using `as.numeric()`.
--   **Inconsistent region names**: We verified that region names matched across datasets. In an ideal scenario, standardized region codes (e.g., ISO or WHO codes) would be used to avoid ambiguity.
--   **Data alignment**: We ensured that all datasets used the same time format and level of aggregation (annual, by WHO region).
+### 3.1.5 Error Handling and Fixes  
+- **Missing values**: Removed using `na.omit()` or `filter(!is.na(...))`  
+- **Non-numeric values**: Converted with `as.numeric()`  
+- **Inconsistent region names**: Standardized for merging  
+- **Data alignment**: Ensured consistent time format and regional aggregation
 
 ## 3.2 Generate necessary variables
-
 ```{r include=FALSE}
 # Create period variable to group years
 healthspending_with_period <- cleaned_healthspending_data %>%
@@ -380,40 +308,29 @@ filter(!is.na(Period)) %>%
     .groups = "drop"
   )
 ```
+To analyze trends, we created a `Period` variable to group years into 5-year intervals, enabling comparison of averages across consistent time blocks.
 
-To analyze trends over time, we created a **period variable** for each dataset to group years into meaningful intervals. This allows us to compare average values across consistent time blocks.
+### 3.2.1 Average Health Spending  
+- **Variables**: `Spending`, `Region`, `Period`  
+- **Purpose**: Calculate average spending per region/period  
+- **Use**: Highlight investment trends  
+- **Analysis**: Compare across time and regions  
 
-### Health Spending
+### 3.2.2 Average DTP Coverage  
+- **Variables**: `Coverage`, `Region`, `PeriodGroup`  
+- **Purpose**: Compute average DTP coverage  
+- **Use**: Assess immunization performance  
+- **Analysis**: Track trends, link to outcomes  
 
-We created a new variable `Period` in the health spending dataset using `mutate()` and `case_when()`. We then calculated the **average health spending** per region and period.
+### 3.2.3 Average Child Mortality  
+- **Variables**: `Deaths`, `Region`, `Period`  
+- **Purpose**: Calculate average child deaths  
+- **Use**: Measure health outcomes  
+- **Analysis**: Identify trends, explore correlations  
 
--   **Variables used**: `Spending`, `Region`, `Period` 
--   **Purpose**: Calculates average health spending per region and period. 
--   **Usefulness**: Highlights regional differences and trends in health investment. 
--   **Intended analysis**: Visualize and compare health spending across time and regions.
+These transformations support cross-regional and temporal comparisons of health spending, vaccination coverage, and child mortality.
 
-### DTP Vaccination Coverage
-
-For the DTP dataset, we used an existing variable `PeriodGroup` (created earlier) and calculated the **average vaccination coverage** per region and period.
-
--   **Variables used**: `Coverage`, `Region`, `PeriodGroup` 
--   **Purpose**: Computes average DTP vaccine coverage per region and period. 
--   **Usefulness**: Evaluates immunization program effectiveness. 
--   **Intended analysis**: Track vaccine coverage trends and relate to health outcomes
-
-### Child Mortality
-
-We also created a `Period` variable for the child mortality dataset. We then summarized the **average number of child deaths** per region and period:
-
--   **Variables used**: `Deaths`, `Region`, `Period`\
--   **Purpose**: Calculates average child deaths per region and period.\
--   **Usefulness**: Measures health outcomes and can be linked to spending and coverage.\
--   **Intended analysis**: Identify regions with high or declining child mortality and explore correlations.
-
-These variables allow us to compare trends in health spending, vaccination coverage, and child mortality across WHO regions and over time.
-
-# 3.25 merge datasets together
-
+## 3.3 merge datasets together
 ```{r include=FALSE}
 # Recode WHO region codes to match full region names used in other datasets
 DTPcoverage <- DTPcoverage %>%
@@ -455,8 +372,21 @@ class(merged_health_data)
 merged_healthdata_df <- as.data.frame(merged_health_data)
 ```
 
-## 3.3 Visualize temporal variation
 
+### 3.3.1 Rationale for Merging Datasets  
+Merging the DTP coverage, health spending, and child mortality datasets enables a comprehensive analysis of global health system performance. Aligning by `Region` and `Period` allows exploration of relationships between investment, service delivery, and outcomes. Key derived indicators:  
+- **Coverage per dollar spent**  
+- **Cost per coverage point**  
+- **Child deaths per dollar spent**  
+
+These metrics help assess health system efficiency across WHO regions over time.
+
+### 3.3.2 Critique and Suggestions for Refinement  
+- **Period Grouping**: Replace repeated `case_when()` with a reusable function  
+- **Missing Data**: Consider imputation or flagging missing values before merging  
+- **Join Strategy**: Use `left_join` or `full_join` to retain more data and allow sensitivity analysis
+
+## 3.4
 ```{r include=FALSE}
 library(ggplot2)
 library(hrbrthemes)
@@ -467,7 +397,7 @@ merged_healthdata_df$Period <- factor(
 )
 ```
 
-```{r echo=FALSE}
+```{r include=FALSE}
 ggplot(merged_healthdata_df, aes(x = Period, y = DollarPerCoveragePoint, group = Region, color = Region)) +
   geom_line(size = 1) +      
   geom_point(size = 2) +     
@@ -492,38 +422,39 @@ ggplot(merged_healthdata_df, aes(x = Period, y = DeathsPerSpending, group = Regi
 
 #vaccinatiegraad vergelijken met childdeath & vaccinatiegraad vergelijken met healthspending. Normale lijngrafieken.
 ```
+```{r echo=FALSE, out.width="80%"}
+knitr::include_graphics("USD_per_coverage.png")
+```
 
-### Temporal Trends in Health Investment and Outcomes
+```{r echo=FALSE, out.width="80%"}
+knitr::include_graphics("USD_per_CD.png")
+```
 
+### 3.4.1 Temporal Trends in Health Investment and Outcomes
 These two line graphs visualize how healthcare efficiency and outcomes have evolved across WHO regions over five-year periods from 2000 to 2022. They align closely with the research question by showing how healthcare spending relates to vaccination coverage and child mortality over time.
 
-#### Graph 1: Child Deaths per Spending over Time
-
--   **What it shows**: The number of child deaths per unit of healthcare spending.
--   **Trend**: A clear downward trend across all regions, indicating improved outcomes per dollar spent.
--   **Notable pattern**: Africa and Europe show the most significant declines, suggesting major gains in healthcare efficiency or effectiveness.
--   **Interpretation**: This trend reflects global progress in reducing child mortality, likely due to better-targeted spending, improved healthcare delivery, and expanded immunization coverage.
-
-#### Graph 2: Dollar per Coverage Point over Time
-
+### 3.4.2 Graph 1: Dollar per Coverage Point over Time
 -   **What it shows**: The average cost (in USD) required to increase DTP3 vaccination coverage by one percentage point.
 -   **Trend**: Most regions show a relatively stable or slightly increasing cost over time.
 -   **Notable pattern**: The Western Pacific region shows a significant increase in cost per coverage point in recent years, suggesting rising marginal costs or reduced efficiency.
 -   **Interpretation**: While some regions maintain cost-effectiveness, others may be facing diminishing returns on investment in immunization programs.
 
-#### Comparison and Dynamics
+### 3.4.3 Graph 2: Child Deaths per Spending over Time
+-   **What it shows**: The number of child deaths per unit of healthcare spending.
+-   **Trend**: A clear downward trend across all regions, indicating improved outcomes per dollar spent.
+-   **Notable pattern**: Africa and Europe show the most significant declines, suggesting major gains in healthcare efficiency or effectiveness.
+-   **Interpretation**: This trend reflects global progress in reducing child mortality, likely due to better-targeted spending, improved healthcare delivery, and expanded immunization coverage.
 
+### 3.4.4 Comparison and Dynamics
 -   **Efficiency vs. Outcome**: While the cost of achieving additional vaccination coverage is rising or stabilizing, the impact of spending on reducing child deaths is improving.
 -   **Temporal Insight**: These trends highlight the evolving dynamics of global health investment—where spending may be increasing, but so is its effectiveness in saving lives.
 
-#### Implications
-
+### 3.4.5 Implications
 -   Policymakers should consider both cost and outcome metrics when evaluating healthcare strategies.
 -   The rising cost per coverage point in some regions may call for more efficient delivery models or targeted interventions.
 -   The declining child deaths per spending metric is a positive signal of global health progress and a justification for continued investment.
 
-## 3.4 Visualize spatial variation
-
+## 3.5 Visualize spatial variation
 ```{r include=FALSE}
 library(sf)
 library(rnaturalearth)
@@ -558,7 +489,7 @@ coverage_mapdata <- merged_health_data %>%
 world <- left_join(world, coverage_mapdata, by = "WHORegion")
 ```
 
-```{r echo=FALSE}
+```{r include=FALSE}
 # Plot choropleth map met echte vaccinatiecijfers
 ggplot(world) +
   geom_sf(aes(fill = AvgCoverage), color = "white", size = 0.2) +
@@ -592,25 +523,23 @@ ggplot(world) +
     legend.position = "bottom"
   )
 ```
+```{r echo=FALSE, out.width="80%"}
+knitr::include_graphics("World_map.png")
+```
 
-### Spatial Analysis of DTP3 Vaccination Coverage (2020–2022)
-
+### 3.5.1 Spatial Analysis of DTP3 Vaccination Coverage (2020–2022)
 This world map visualizes average DTP3 vaccination coverage by WHO region from 2020 to 2022, using a color gradient from purple (60%) to yellow (100%). The map reveals clear regional disparities: high-income regions such as Europe and the Western Pacific generally exhibit higher coverage (light green to yellow), while lower-income regions like Africa and parts of the Eastern Mediterranean show lower coverage (purple to blue).
 
-#### Spatial Anomalies and Regional Comparisons
-
+### 3.5.2 Spatial Anomalies and Regional Comparisons
 Notably, some middle-income regions, such as parts of South-East Asia, achieve relatively high coverage despite lower spending levels, suggesting efficient immunization programs. Conversely, certain countries in the Americas show unexpectedly moderate coverage despite higher average spending, indicating potential inefficiencies or access barriers.
 
-#### Interpretation and Mapping Critique
-
+### 3.5.3 Interpretation and Mapping Critique
 The map effectively communicates broad regional trends but may obscure within-region variation due to aggregation. For example, large countries with internal disparities (e.g., India, Brazil) are represented by a single color, which may oversimplify complex national dynamics. Additionally, the use of discrete color bands may exaggerate differences between countries near category thresholds.
 
-#### Mapping Choices
-
+### 3.5.4 Mapping Choices
 While the color scheme is intuitive and accessible, a continuous gradient or country-level granularity could enhance interpretability. Including data labels or interactive elements (in a web-based version) would further support detailed analysis. Despite these limitations, the map serves as a compelling visual summary of global immunization equity and supports the research question by highlighting spatial patterns in vaccination coverage relative to regional healthcare investment.
 
-## 3.5 Visualize sub-population variation
-
+## 3.6 Visualize sub-population variation
 ```{r include=FALSE}
 library(tidyverse)
 library(readxl)
@@ -694,7 +623,7 @@ plot_data <- plot_data %>%
   mutate(FillGroup = paste(Group, Metric, sep = " - "))
 ```
 
-```{r visualise_map, echo=FALSE}
+```{r visualise_map, include=FALSE}
 ggplot(plot_data, aes(x = Group, y = Value, fill = FillGroup)) +
   geom_col(position = "dodge") +
   geom_text(aes(label = round(Value, 1)), 
@@ -725,24 +654,20 @@ ggplot(plot_data, aes(x = Group, y = Value, fill = FillGroup)) +
     axis.text = element_text(color = "#333333")
   )
 ```
+```{r echo=FALSE, out.width="80%"}
+knitr::include_graphics("sub_pop.png")
+```
 
-### Subgroup Analysis: Top vs Bottom 3 WHO Regions (2022)
-
+### 3.6.1 Subgroup Analysis: Top vs Bottom 3 WHO Regions (2022)
 This bar chart compares the top 3 and bottom 3 WHO regions based on average healthcare spending per capita in 2022. It visualizes three key metrics:
-
 -   **Average Health Spending (USD per capita)**
 -   **Average DTP3 Vaccination Coverage (%)**
 -   **Average Child Deaths**
 
-#### Alignment with Research Topic
+### 3.6.2 Alignment with Research Topic
+This visualization directly supports the research question by dividing regions into high- and low-spending groups, the plot highlights how investment levels relate to health outcomes across sub-populations.
 
-This visualization directly supports the research question:\
-*"How does government healthcare spending per capita correlate with national vaccination coverage rates for routine immunisations?"*
-
-By dividing regions into high- and low-spending groups, the plot highlights how investment levels relate to health outcomes across sub-populations.
-
-#### Group Differences (Quantified)
-
+### 3.6.3 Group Differences (Quantified)
 | Metric       | Top 3 Regions | Bottom 3 Regions | Difference   |
 |--------------|---------------|------------------|--------------|
 | Spending     | \$1852.7      | \$305.9          | +\$1546.8    |
@@ -753,19 +678,16 @@ By dividing regions into high- and low-spending groups, the plot highlights how 
 -   They achieve **9 percentage points higher** vaccination coverage.
 -   They experience nearly **10 times fewer** child deaths.
 
-#### Evaluation of Subgroup Analysis
-
+### 3.6.4 Evaluation of Subgroup Analysis
 This subgroup comparison reveals a clear gradient: higher spending is associated with better vaccination outcomes and significantly lower child mortality. The differences are not only statistically meaningful but also socially and ethically significant, especially in the context of global health equity.
 
-#### Implications
-
+### 3.6.5 Implications
 -   **Policy Insight**: The data suggests that increasing healthcare investment in underfunded regions could substantially improve immunization coverage and reduce child mortality.
 -   **Equity Concern**: The stark contrast in child death rates underscores the urgent need for targeted support in low-spending regions.
 -   **Further Research**: This analysis invites deeper exploration into how efficiently funds are used and what other systemic factors (e.g., governance, infrastructure) influence outcomes.
 
-## 3.6 Event analysis
-
-```{r echo=FALSE}
+## 3.7 Event analysis
+```{r include=FALSE}
 # Take the temporal variation plots and add a vertical line at 2015-2019
 ggplot(merged_healthdata_df, aes(x = Period, y = DollarPerCoveragePoint, group = Region, color = Region)) +
   geom_line(size = 1) +      
@@ -793,6 +715,13 @@ ggplot(merged_healthdata_df, aes(x = Period, y = DeathsPerSpending, group = Regi
   geom_vline(xintercept = 4, size = 0.75) +
   annotate("text", x = 3.5, y = 62500, size = 3.5, label = "Pre- / during\nCOVID-19")
 ```
+```{r echo=FALSE, out.width="80%"}
+knitr::include_graphics("USD_per_cov_event.png")
+```
+
+```{r echo=FALSE, out.width="80%"}
+knitr::include_graphics("CD_per_spending_event.png")
+```
 
 Applying the findings related to the correlation between government healthcare spending per capita and national vaccination coverage rates worldwide, we can analyse a critical event period from 2020 to 2022 which relates to the COVID-19 pandemic. Unlike gradual policy reforms during the 2010-2014 period such as GAVI's (source <https://www.gavi.org/our-alliance/strategy/phase-3-2011-2015>) innovative financing mechanisms which introduced market-based incentives to lower vaccine pricing and availability structure, the pandemic created an acute simultaneous shock to every healthcare system worldwide. This situation enables a unique opportunity to examine how external crises affect government healthcare spending per capita and national vaccination coverage rates worldwide.
 
@@ -808,7 +737,20 @@ Similarly the comparison between sub populations shows how bottom performing reg
 
 Finally, the dollar per coverage point data shows a sudden spike in costs, which suggests that it became much more expensive to maintain coverage during the pandemic. The aforementioned supply chain disruption provides an explanation to this spike. Service suspensions and supply-chain delays caused vaccination volumes to drop, meaning that the delivery costs such as personnel and cold chains had to be spread over fewer doses, significantly increasing the per-point cost.
 
-Here you provide a description of why the plot above is relevant to your specific social problem.
+### 3.7.1 Interpretation and Relevance
+
+Over the course of the analysis of the relation between all four graphs and COVID-19, strong temporal evidence has come to light, hinting a pandemic-related causation rather than coincidental trends. This challenges theories which assume stable and linear relationships between government healthcare spending and vaccination coverages. Three key insights emerge from the analysis:
+
+Crisis-state exception: Traditional vaccination coverage models operate under the assumption of stability and predictability, meaning that major disruptions such as COVID-19 can crumble healthcare systems if these are not equipped with dynamic frameworks addressing both normal and crisis-states.
+
+System resilience hierarchy: An unrecognized hiearchy of system resilience between regions emerged with this study, slicing through traditional income classifications. Community-based delivery systems such as the ones in Rwanda and Bangladesh (source https://pubmed.ncbi.nlm.nih.gov/38963883/) demonstrated certain poorer areas have superior crisis adaptability compared to other highly bureacratic systems in richer countries. This insights allows for the discussion diving into the potential vulnerability that comes with highly institutionalized systems.
+
+Resource Mobilization Capacity: The cost spike related to supply chain disruptions highlights the importance of rapidly scaling spending in response to crises. Similar to Keynes' view, this insight challenges static spending-outcome models by introducing varied increase in resources as a better option.
+
+One key takeaway from the study is how resilient delivery systems are key to react to sudden disruptors. The superior performance of community-based systems might lead to conversations on how even more developed countries should emphasize on decentralized, locally-controlled delivery mechanisms to maintain healthcare standards during major events. 
+
+Furthemore over-sophisticated health systems and its shortcomings could direct policy makers to evaluate the efficiency advantages or disadvantages of complex and integrated systems. Finally, the varied regional responses to the pandemic era disclose poor international coordination, with each region managing responses independently. Advocating once more for more flexible, decentralized international response frameworks. 
+
 
 # Part 4 - Discussion
 
@@ -824,7 +766,7 @@ One key takeaway from the study is how resilient delivery systems are key to rea
 
 Furthermore over-sophisticated health systems and its shortcomings could direct policy makers to evaluate the efficiency advantages or disadvantages of complex and integrated systems. Finally, the varied regional responses to the pandemic era disclose poor international coordination, with each region managing responses independently. Advocating once more for more flexible, decentralized international response frameworks.
 
-## 4.1 Discuss your findings
+## 4.1 Discuss our findings
 
 Our most significant finding was that sophisticated, well-funded healthcare systems suffered the greatest efficiency losses during the pandemic, whereas simpler, less-funded systems proved resilience. Europe maintained \>90% coverage but had dramatic cost increases from \$25 to \$31 per coverage point during COVID. On the other hand, African regions maintained stable child deaths per spending ratios despite having the lowest spending levels.
 
